--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
-apex==0.9.10dev
 matplotlib==3.4.3
 networks==0.3.7
-networkx==2.6.2
 numpy==1.21.2
 ogb==1.3.2
 pandas==1.3.3
-rdkit==2022.3.5
 rdkit_pypi==2021.9.4
 scikit_learn==1.1.2
 scipy==1.7.1
-tensorboard_logger==0.1.0
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==1.9.1+cu102
+-f https://pytorch-geometric.com/whl/torch-1.9.1+cu102.html
+torch_scatter==2.0.9
+-f https://pytorch-geometric.com/whl/torch-1.9.1+cu102.html
+torch_sparse==0.6.12
+-f https://pytorch-geometric.com/whl/torch-1.9.1+cu102.html
+torch_cluster==1.6.0
+-f https://pytorch-geometric.com/whl/torch-1.9.1+cu102.html
+torch-spline-conv==1.2.1
+torch_geometric==2.0.1
+torchvision==0.10.1
 tqdm==4.50.0
 transformers==4.12.2
+tensorboard_logger
+tensorflow-gpu==2.9.1
+markupsafe==2.0.1
